--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,3 +43,11 @@ body{
     font-weight: 400;
     font-style: normal;
 }
+
+@media screen and (min-width: 768px) {
+    .md\:col-4 {
+        flex: 0 0 auto;
+        padding: 0.5rem;
+        width: 31.3333% !important;
+    }
+}
